--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1,109 +1,148 @@
-/* line 5, ../scss/screen.scss */
+/* line 30, ../scss/screen.scss */
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 11, ../scss/screen.scss */
+/* line 36, ../scss/screen.scss */
 html, body, .container {
   min-height: 100%;
   height: 100%;
+  width: 100%;
 }
 
-/* line 16, ../scss/screen.scss */
+/* line 42, ../scss/screen.scss */
 html {
+  -ms-text-size-adjust: 100%;
+  /* 4 */
+  -webkit-text-size-adjust: 100%;
+  /* 4 */
+}
+
+/* line 49, ../scss/screen.scss */
+html, body {
   font-size: 28%;
 }
-@media screen and (min-width: 31.25rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 37.3%;
+@media screen and (min-width: 100px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 7.14286%;
   }
 }
-@media screen and (min-width: 37.5rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 46.8%;
+@media screen and (min-width: 200px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 14.28571%;
   }
 }
-@media screen and (min-width: 43.75rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 55.2%;
+@media screen and (min-width: 300px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 21.42857%;
   }
 }
-@media screen and (min-width: 50rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 63.6%;
+@media screen and (min-width: 400px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 28.57143%;
   }
 }
-@media screen and (min-width: 56.25rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 71%;
+@media screen and (min-width: 500px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 35.71429%;
   }
 }
-@media screen and (min-width: 62.5rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 78.4%;
+@media screen and (min-width: 600px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 42.85714%;
   }
 }
-@media screen and (min-width: 68.75rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 86.8%;
+@media screen and (min-width: 700px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 50%;
   }
 }
-@media screen and (min-width: 75rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
-    font-size: 94.7%;
+@media screen and (min-width: 800px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 57.14286%;
   }
 }
-@media screen and (min-width: 79.1875rem) {
-  /* line 16, ../scss/screen.scss */
-  html {
+@media screen and (min-width: 900px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 64.28571%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 71.42857%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 78.57143%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 85.71429%;
+  }
+}
+@media screen and (min-width: 1300px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
+    font-size: 92.85714%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  /* line 49, ../scss/screen.scss */
+  html, body {
     font-size: 100%;
   }
 }
 
-/* line 58, ../scss/screen.scss */
+/* line 60, ../scss/screen.scss */
 body {
   padding: 1.875rem;
   font-family: "Helvetica", sans-serif;
 }
 
-/* line 63, ../scss/screen.scss */
+/* line 65, ../scss/screen.scss */
 a {
   color: #fff;
   text-decoration: none;
 }
-/* line 67, ../scss/screen.scss */
+/* line 69, ../scss/screen.scss */
 a:hover {
   color: #accfcc;
 }
 
-/* line 72, ../scss/screen.scss */
+/* line 74, ../scss/screen.scss */
 p {
   color: #fff;
   margin: 0;
   font-weight: bold;
   line-height: 1;
 }
-/* line 78, ../scss/screen.scss */
+/* line 80, ../scss/screen.scss */
 .top p {
   font-size: 5.9375rem;
   margin-left: -0.25rem;
 }
-/* line 83, ../scss/screen.scss */
+/* line 85, ../scss/screen.scss */
 .bottom p {
   font-size: 2.5rem;
 }
 
-/* line 88, ../scss/screen.scss */
+/* line 90, ../scss/screen.scss */
 .container {
   position: relative;
   background: #171511;
@@ -111,12 +150,12 @@ p {
   min-height: 37.5rem;
 }
 
-/* line 95, ../scss/screen.scss */
+/* line 97, ../scss/screen.scss */
 .highlight {
   color: #8a0917;
 }
 
-/* line 99, ../scss/screen.scss */
+/* line 101, ../scss/screen.scss */
 .bottom {
   position: absolute;
   bottom: 1.875rem;
