--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -1,6 +1,31 @@
-@function rem-calc($num) {
-    @return ($num / 16) * 1rem;
+$rem-base: 16;
+
+// STRIP UNIT
+// It strips the unit of measure and returns it
+@function strip-unit($num) {
+  @return $num / ($num * 0 + 1);    
 }
+
+// CONVERT TO REM
+@function convert-to-rem($value, $base-value: $rem-base)  {
+  $value: strip-unit($value) / strip-unit($base-value) * 1rem;
+  @if ($value == 0rem) { $value: 0; } // Turn 0rem into 0
+  @return $value;
+}
+
+@function rem-calc($values, $base-value: $rem-base) {
+  $max: length($values);
+
+  @if $max == 1 { @return convert-to-rem(nth($values, 1), $base-value); }
+
+  $remValues: ();
+  @for $i from 1 through $max {
+    $remValues: append($remValues, convert-to-rem(nth($values, $i), $base-value));
+  }
+  @return $remValues;
+}
+
+
 
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
@@ -11,48 +36,25 @@
 html, body, .container {
     min-height: 100%;
     height: 100%;
+    width: 100%;
 }
 
 html {
+    -ms-text-size-adjust: 100%;
+    /* 4 */
+    -webkit-text-size-adjust: 100%;
+    /* 4 */
+}
+
+html, body {
     // Mobile
     font-size: 28%;
 
-    @media screen and (min-width: rem-calc(500)) {
-        font-size: 37.3%;
+    @for $i from 1 through 14 {
+        @media screen and (min-width: #{$i * 100}px) {
+            font-size: #{(($i * 100) / 14 / 100) * 100%};
+        }
     }
-
-    @media screen and (min-width: rem-calc(600)) {
-        font-size: 46.8%;
-    }
-
-    @media screen and (min-width: rem-calc(700)) {
-        font-size: 55.2%;
-    }
-
-    @media screen and (min-width: rem-calc(800)) {
-        font-size: 63.6%;
-    }
-
-    @media screen and (min-width: rem-calc(900)) {
-        font-size: 71%;
-    }
-
-    @media screen and (min-width: rem-calc(1000)) {
-        font-size: 78.4%;
-    }
-
-    @media screen and (min-width: rem-calc(1100)) {
-        font-size: 86.8%;
-    }
-
-    @media screen and (min-width: rem-calc(1200)) {
-        font-size: 94.7%;
-    }
-
-    @media screen and (min-width: rem-calc(1267)) {
-        font-size: 100%;
-    }
-
 }
 
 body {
