--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1,15 +1,16 @@
-/* line 30, ../scss/screen.scss */
+/* line 29, ../scss/screen.scss */
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 36, ../scss/screen.scss */
+/* line 35, ../scss/screen.scss */
 html, body, .container {
   min-height: 100%;
   height: 100%;
   width: 100%;
+  color: #fff;
 }
 
 /* line 42, ../scss/screen.scss */
@@ -124,25 +125,39 @@ a {
 a:hover {
   color: #accfcc;
 }
+/* line 73, ../scss/screen.scss */
+a.project {
+  line-height: 1.2;
+}
+/* line 77, ../scss/screen.scss */
+a.projects__back {
+  font-size: 1.125rem;
+  display: inline-block;
+  margin-bottom: 10px;
+}
 
-/* line 74, ../scss/screen.scss */
+/* line 84, ../scss/screen.scss */
 p {
   color: #fff;
   margin: 0;
   font-weight: bold;
   line-height: 1;
 }
-/* line 80, ../scss/screen.scss */
+/* line 90, ../scss/screen.scss */
 .top p {
   font-size: 5.9375rem;
   margin-left: -0.25rem;
 }
-/* line 85, ../scss/screen.scss */
+/* line 95, ../scss/screen.scss */
+.top p.projects {
+  font-size: 3.125rem;
+}
+/* line 99, ../scss/screen.scss */
 .bottom p {
   font-size: 2.5rem;
 }
 
-/* line 90, ../scss/screen.scss */
+/* line 104, ../scss/screen.scss */
 .container {
   position: relative;
   background: #171511;
@@ -150,12 +165,99 @@ p {
   min-height: 37.5rem;
 }
 
-/* line 97, ../scss/screen.scss */
+/* line 111, ../scss/screen.scss */
 .highlight {
   color: #8a0917;
 }
 
-/* line 101, ../scss/screen.scss */
+@-webkit-keyframes fadeOutRight {
+  /* line 117, ../scss/screen.scss */
+  0% {
+    -webkit-transform: translateX(0);
+    opacity: 1;
+  }
+
+  /* line 121, ../scss/screen.scss */
+  100% {
+    -webkit-transform: translateX(1.25rem);
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOutRight {
+  /* line 128, ../scss/screen.scss */
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  /* line 132, ../scss/screen.scss */
+  100% {
+    transform: translateX(1.25rem);
+    opacity: 0;
+  }
+}
+
+/* line 138, ../scss/screen.scss */
+.top {
+  position: absolute;
+  width: calc(100% - 3.75rem);
+  top: 1.25rem;
+  left: 1.875rem;
+}
+/* line 145, ../scss/screen.scss */
+.top.index.ng-enter {
+  -webkit-transition: opacity 350ms linear 270ms;
+  transition: opacity 350ms linear 270ms;
+  opacity: 0;
+}
+/* line 152, ../scss/screen.scss */
+.top.index.ng-enter-active {
+  opacity: 1;
+}
+/* line 156, ../scss/screen.scss */
+.top.index.ng-leave {
+  -webkit-transition: all 270ms linear;
+  transition: all 270ms linear;
+}
+/* line 167, ../scss/screen.scss */
+.top.index.ng-leave-active p:nth-child(1) {
+  -webkit-animation: fadeOutRight 150ms 0ms ease-out forwards;
+}
+/* line 167, ../scss/screen.scss */
+.top.index.ng-leave-active p:nth-child(2) {
+  -webkit-animation: fadeOutRight 150ms 40ms ease-out forwards;
+}
+/* line 167, ../scss/screen.scss */
+.top.index.ng-leave-active p:nth-child(3) {
+  -webkit-animation: fadeOutRight 150ms 80ms ease-out forwards;
+}
+/* line 167, ../scss/screen.scss */
+.top.index.ng-leave-active p:nth-child(4) {
+  -webkit-animation: fadeOutRight 150ms 120ms ease-out forwards;
+}
+/* line 174, ../scss/screen.scss */
+.top.projects.ng-enter {
+  -webkit-transition: opacity 350ms linear 270ms;
+  transition: opacity 350ms linear 270ms;
+  opacity: 0;
+}
+/* line 181, ../scss/screen.scss */
+.top.projects.ng-enter-active {
+  opacity: 1;
+}
+/* line 185, ../scss/screen.scss */
+.top.projects.ng-leave {
+  -webkit-transition: opacity 350ms linear;
+  transition: opacity 350ms linear;
+  opacity: 1;
+}
+/* line 192, ../scss/screen.scss */
+.top.projects.ng-leave-active {
+  opacity: 0;
+}
+
+/* line 197, ../scss/screen.scss */
 .bottom {
   position: absolute;
   bottom: 1.875rem;
