--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -3,29 +3,28 @@ $rem-base: 16;
 // STRIP UNIT
 // It strips the unit of measure and returns it
 @function strip-unit($num) {
-  @return $num / ($num * 0 + 1);    
+    @return $num / ($num * 0 + 1);
 }
 
 // CONVERT TO REM
 @function convert-to-rem($value, $base-value: $rem-base)  {
-  $value: strip-unit($value) / strip-unit($base-value) * 1rem;
-  @if ($value == 0rem) { $value: 0; } // Turn 0rem into 0
-  @return $value;
+    $value: strip-unit($value) / strip-unit($base-value) * 1rem;
+    @if ($value == 0rem) { $value: 0; } // Turn 0rem into 0
+    @return $value;
 }
 
 @function rem-calc($values, $base-value: $rem-base) {
-  $max: length($values);
+    $max: length($values);
 
-  @if $max == 1 { @return convert-to-rem(nth($values, 1), $base-value); }
+    @if $max == 1 { @return convert-to-rem(nth($values, 1), $base-value); }
 
-  $remValues: ();
-  @for $i from 1 through $max {
-    $remValues: append($remValues, convert-to-rem(nth($values, $i), $base-value));
-  }
-  @return $remValues;
+    $remValues: ();
+    @for $i from 1 through $max {
+        $remValues: append($remValues, convert-to-rem(nth($values, $i), $base-value));
+    }
+
+    @return $remValues;
 }
-
-
 
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
@@ -37,6 +36,7 @@ html, body, .container {
     min-height: 100%;
     height: 100%;
     width: 100%;
+    color: #fff;
 }
 
 html {
@@ -69,6 +69,16 @@ a {
     &:hover {
         color: #accfcc;
     }
+
+    &.project {
+        line-height: 1.2;
+    }
+
+    &.projects__back {
+        font-size: rem-calc(18);
+        display: inline-block;
+        margin-bottom: 10px;
+    }
 }
 
 p {
@@ -80,6 +90,10 @@ p {
     .top & {
         font-size: rem-calc(95);
         margin-left: rem-calc(-4);
+    }
+
+    .top &.projects {
+        font-size: rem-calc(50);
     }
 
     .bottom & {
@@ -96,6 +110,88 @@ p {
 
 .highlight {
     color: #8a0917;
+}
+
+// Angular transitions
+@-webkit-keyframes fadeOutRight {
+    0% {
+        -webkit-transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateX(rem-calc(20));
+        opacity: 0;
+    }
+}
+
+@keyframes fadeOutRight {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(rem-calc(20));
+        opacity: 0;
+    }
+}
+
+.top {
+    position: absolute;
+    width: calc(100% - #{rem-calc(60)});
+    top: rem-calc(20);
+    left: rem-calc(30);
+
+    // Index
+    &.index.ng-enter {
+        -webkit-transition: opacity 350ms linear 270ms;
+        transition: opacity 350ms linear 270ms;
+
+        opacity: 0;
+    }
+
+    &.index.ng-enter-active {
+        opacity: 1;
+    }
+
+    &.index.ng-leave {
+        -webkit-transition: all 270ms linear;
+        transition: all 270ms linear;
+    }
+
+    &.index.ng-leave p {
+    }
+
+    &.index.ng-leave-active p {
+        $delay: 40;
+        @for $i from 1 through 4 {
+            &:nth-child(#{$i}) {
+                -webkit-animation: fadeOutRight 150ms #{$i * $delay - $delay}ms ease-out forwards;
+            }
+        }
+    }
+
+    // Projects
+    &.projects.ng-enter {
+        -webkit-transition: opacity 350ms linear 270ms;
+        transition: opacity 350ms linear 270ms;
+
+        opacity: 0;
+    }
+
+    &.projects.ng-enter-active {
+        opacity: 1;
+    }
+
+    &.projects.ng-leave {
+        -webkit-transition: opacity 350ms linear;
+        transition: opacity 350ms linear;
+
+        opacity: 1;
+    }
+
+    &.projects.ng-leave-active {
+        opacity: 0;
+    }
 }
 
 .bottom {
