--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,4 +23,6 @@
             <a href="/">Projects</a>
             <a href="/">Contact</a>
         </nav>
+
+        <div class="scroll-position"></div>
     </header>
