--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -58,6 +58,16 @@ header {
 
     color: $font-color;
 
+    .scroll-position {
+        display: block;
+        position: absolute;
+        height: 1px;
+        width: 10px;
+        background-color: $flat-blue;
+        bottom: -1px;
+        left: 0;
+    }
+
     div {
         float: left;
         line-height: 1;
@@ -94,8 +104,8 @@ header {
 }
 
 #content-wrapper {
-    margin: 95px auto 0;
-    padding: 30px 0;
+    margin: 0 auto;
+    padding: 125px 0 30px;
     width: 80%;
     max-width: 600px;
     font-size: 22px;
