--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -20,10 +20,15 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
+    margin-bottom: 0;
 
     time + & {
         margin-top: -10px;
     }
+}
+
+p {
+    margin-top: 0;
 }
 
 time {
