--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,10 @@
 
         <nav>
             <a href="/">Home</a>
-            <a href="/">About</a>
+            <a href="/about/">About</a>
             <a href="/words/">Words</a>
-            <a href="/">Projects</a>
-            <a href="/">Contact</a>
+            <a href="/projects/">Projects</a>
+            <a href="/contact/">Contact</a>
         </nav>
 
         <div class="scroll-position"></div>
