Update title tag.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Daniel Samuels - Software developer based in Cambridge</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}Daniel Samuels - Software developer based in Cambridge</title>
     <link rel="stylesheet" href="/static/css/screen.css">
 
     {% if page.canonical %}
