Add page title to content layout.

--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,6 +2,7 @@
 
 <div id="content-wrapper">
 
+    <h2>{{ page.title }}</h2>
     {% if page.date %}
         <time>{{ page.date | date_to_long_string }}</time>
     {% endif %}
