--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -39,6 +39,10 @@ time {
     font-size: 14px;
 }
 
+li + li {
+    margin-top: 14px;
+}
+
 a {
     color: $text-color;
     border-bottom: 1px dashed $text-color;
