--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -75,7 +75,7 @@ header {
         display: block;
         position: absolute;
         height: 1px;
-        width: 10px;
+        width: 0;
         background-color: $flat-blue;
         bottom: -1px;
         left: 0;
