Add blurred header text.

--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -1,5 +1,7 @@
 {% include header.html %}
 
+<div id="content-dupe"></div>
+
 <div id="content-wrapper">
 
     <h2>{{ page.title }}</h2>
@@ -11,4 +13,5 @@
 </div>
 
 <script src="/static/js/scroll-progress.js"></script>
+<script src="/static/js/content-dupe.js"></script>
 <link rel="stylesheet" href="/static/css/pygments.css">
