--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -363,9 +363,9 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 3;
   font-weight: 600;
   padding: 30px;
-  background: rgba(255, 255, 255, 0.925);
   border-bottom: 1px solid rgba(52, 152, 219, 0.3);
   font-size: 1rem;
   color: #000; }
@@ -398,10 +398,31 @@ header {
     header a + a {
       margin-left: 15px; }
 
-#content-wrapper {
+#content-wrapper, #content-dupe {
   margin: 0 auto;
   padding: 125px 0 30px;
   width: 80%;
   max-width: 600px;
   font-size: 1.375rem;
-  line-height: 1.5; }
+  line-height: 1.5;
+  z-index: 1; }
+
+#content-dupe {
+  position: fixed;
+  width: 100%;
+  max-width: 620px;
+  height: 95px;
+  z-index: 2;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding: 0 10px;
+  overflow-y: hidden;
+  background-color: #FFF;
+  color: transparent;
+  text-shadow: 0 0 7px rgba(0, 0, 0, 0.3); }
+  #content-dupe a {
+    color: inherit;
+    border-bottom-color: rgba(0, 0, 0, 0.08); }
+  #content-dupe .expander {
+    padding-top: 125px; }
