--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -133,7 +133,6 @@ header {
 
 #content-dupe {
     position: fixed;
-    width: 100%;
     max-width: 620px;
     height: 95px;
     z-index: 2;
@@ -154,5 +153,25 @@ header {
 
     .expander {
         padding-top: 125px;
+    }
+}
+
+@media only screen and (max-width: 736px) {
+    #content-dupe {
+        display: none;
+    }
+
+    header {
+        text-align: center;
+        background: rgba(#fff, 0.925);
+
+        div, nav {
+            width: 100%;
+        }
+
+        nav {
+            float: left;
+            margin-top: 12px;
+        }
     }
 }
