Link "logo" to homepage.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <a href="#">Daniel Samuels</a>
+            <a href="/">Daniel Samuels</a>
             <small>Software developer based in Cambridge</small>
         </div>
 
