Move scroll-progress to header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>{% if page.title %}{{ page.title }} - {% endif %}Daniel Samuels - Software developer based in Cambridge</title>
     <link rel="stylesheet" href="/static/css/screen.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% if page.canonical %}
         <link rel="canonical" href="{{ page.canonical }}">
     {% endif %}
+
+    <script src="/static/js/scroll-progress.js"></script>
 </head>
 <body>
     <header>
