Add content dupe to listing template.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -1,7 +1,11 @@
 {% include header.html %}
 
+<div id="content-dupe"></div>
+
 <div id="content-wrapper">
 
     <h2>{{ page.title }}</h2>
     {{ content }}
 </div>
+
+<script src="/static/js/content-dupe.js"></script>
