--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -156,14 +156,87 @@ header {
     }
 }
 
+#backdrop {
+    position: absolute;
+    top: 95px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+
+    #contents {
+        animation-name: backdrop-scroll;
+        animation-duration: 25s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+
+        img {
+            transition: filter 0.35s;
+            filter: grayscale(1);
+
+            &:hover {
+                filter: grayscale(0);
+            }
+        }
+    }
+
+    img {
+        margin: 20px;
+    }
+
+    #overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+
+        pointer-events: none;
+
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            // min-width: 200px;
+            max-width: 90%;
+            // min-height: 200px;
+            max-height: 90%;
+
+            transform: translateX(-50%) translateY(-50%);
+            // height: calc(80% - 95px);
+            margin: 0;
+            border-radius: 50%;
+            box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
+        }
+    }
+}
+
+@keyframes backdrop-scroll {
+    from {
+        transform: translateX(-273px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+
 @media only screen and (max-width: 736px) {
+    #content-wrapper {
+        font-size: 18px;
+        padding-top: 160px;
+        width: calc(100% - 60px);
+    }
+
     #content-dupe {
         display: none;
     }
 
     header {
         text-align: center;
-        background: rgba(#fff, 0.925);
+        background: #fff;
 
         div, nav {
             width: 100%;
@@ -173,5 +246,20 @@ header {
             float: left;
             margin-top: 12px;
         }
+    }
+
+    #backdrop {
+        top: 139px;
+    }
+}
+
+@media only screen and (max-width: 383px) {
+
+    #backdrop {
+        top: 171px;
+    }
+
+    #content-wrapper {
+        padding-top: 201px;
     }
 }
