--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     <title>{% if page.title %}{{ page.title }} - {% endif %}Daniel Samuels - Software developer based in Cambridge</title>
     <link rel="stylesheet" href="/static/css/screen.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed for danielsamuels.co.uk" href="/words/feed/" />
 
     {% if page.canonical %}
         <link rel="canonical" href="{{ page.canonical }}">
