--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -12,5 +12,4 @@
     {{ content }}
 </div>
 
-<script src="/static/js/content-dupe.js"></script>
-<link rel="stylesheet" href="/static/css/pygments.css">
+{% include footer.html %}
