--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -10,6 +10,25 @@
     {% endif %}
 
     {{ content }}
-</div>
 
+    {% if page.canonical %}
+    <em>This post originally appeared <a href="{{ page.canonical }}" target="_blank">on the Onespacemedia website</a>.</em>
+    {% endif %}
+
+    {% if page.id and page.comments_disabled != true %}
+    <div id="disqus_thread" style="margin-top: 30px;"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'danielsamuels';
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+    {% endif %}
+</div>
 {% include footer.html %}
