--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,7 @@
             <a href="/">Home</a>
             <a href="/about/">About</a>
             <a href="/words/">Words</a>
+            <a href="https://www.flickr.com/photos/danielsamuels/">Pictures</a>
             <a href="/projects/">Projects</a>
             <a href="/contact/">Contact</a>
         </nav>
