--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -182,6 +182,10 @@ header {
                 filter: grayscale(0);
             }
         }
+
+        .row {
+            height: 94px;
+        }
     }
 
     img {
