--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% if page.title %}{{ page.title }} - {% endif %}Daniel Samuels - Software developer based in Cambridge</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}Daniel Finch - Software developer based in Cambridge</title>
 
     <link rel="stylesheet" href="/static/css/screen.css">
     <link rel="stylesheet" href="/static/css/pygments.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="alternate" type="application/rss+xml" title="RSS Feed for danielsamuels.co.uk" href="/words/feed/" />
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed for danielfinch.co.uk" href="/words/feed/" />
 
     {% if page.canonical %}
         <link rel="canonical" href="{{ page.canonical }}">
@@ -31,7 +31,7 @@
 
     <header>
         <div>
-            <a href="/">Daniel Samuels</a>
+            <a href="/">Daniel Finch</a>
             <small>Software developer based in Cambridge</small>
         </div>
 
